@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013 Simple Injector Contributors
+ * Copyright (c) 2013-2015 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -101,7 +101,8 @@ namespace SimpleInjector.Integration.WebApi
         /// <returns>The dependency scope.</returns>
         IDependencyScope IDependencyResolver.BeginScope()
         {
-            return new SimpleInjectorWebApiDependencyResolver(this.container, beginScope: true);
+            return new SimpleInjectorWebApiDependencyResolver(this.container, 
+                beginScope: this.container.GetCurrentExecutionContextScope() == null);
         }
 
         /// <summary>Retrieves a service from the scope.</summary>
