@@ -9,6 +9,9 @@ Version vNext
 		-[Core] Nested types in exception messages are now displayed with a dot instead of a + sign, as C#
 		 developers are used to. (work item 21011).
 
+	Improvements/Changes:
+		-[WebApi] SimpleInjectorWebApiDependencyResolver.BeginScope will now only create a new execution 
+		 context scope in case there is no active scope yet (work item 21015).
 
 Version 2.7.3 (v2.7.3 RTM) 2015-03-09
 
